# mpi_kmeans

./: .gitignore  CMakeLists.txt  README.md  main.cpp
